# KrystalliumAdminUi

./: .gitignore  AttributeTypes.cpp  AttributeTypes.h  Builder.cpp  Builder.h  CMakeLists.txt  Effects.cpp  Effects.h  Main.qml  main.cpp
controls/: ActionComboBox.qml  Editor.qml  EffectDialog.qml  GridContentDelegate.qml  SubtitleDelegate.qml  TargetComboBox.qml
pages/: BloodSamplesPage.qml  ConnectPage.qml  EffectsPage.qml  EnlistedPage.qml  JsonApiListPage.qml  OverviewPage.qml  RawSamplesPage.qml  RefinedSamplesPage.qml  SettingsPage.qml
